--- a/meets.html
+++ b/meets.html
@@ -6,9 +6,15 @@
     <title>Meets List</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="default-mode">
     <a href="#main-content" class="skip-link">Skip to Main Content</a>
     <header>
+                        <!-- Theme Toggle Buttons -->
+        <div class="theme-toggle">
+            <button id="default-mode-toggle">Default Mode</button>
+            <button id="dark-mode-toggle">Dark Mode</button>
+            <button id="high-contrast-toggle">High Contrast</button>
+        </div>
         <h1>Meets List</h1>
         <div class="topnav">
             <a href="index.html">Home</a></li>
@@ -41,7 +47,7 @@
 
         </ul>
     </div>
-    <footer>
+    <footer class="default-mode">
         <p>Skyline High School</p>
     </footer>
 </body>
