--- a/meets/56th_Holly-Duane_Raffin_Festival_of_Races_Mens_5000_Meters_D1_JV_Boys_24.html
+++ b/meets/56th_Holly-Duane_Raffin_Festival_of_Races_Mens_5000_Meters_D1_JV_Boys_24.html
@@ -55,11 +55,13 @@
         <img src="../images/profiles/23349698.jpg" width="200" alt="Profile picture of Oskar MacArthur"> 
         <figcaption>Oskar MacArthur</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>6.</dd>
-        <dt>Time</dt><dd>17:57.7</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>6.</dd>
+            <dt>Time</dt><dd>17:57.7</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -67,11 +69,13 @@
         <img src="../images/profiles/19203161.jpg" width="200" alt="Profile picture of Martin Gehrke"> 
         <figcaption>Martin Gehrke</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>7.</dd>
-        <dt>Time</dt><dd>17:58.8</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>7.</dd>
+            <dt>Time</dt><dd>17:58.8</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -79,11 +83,13 @@
         <img src="../images/profiles/23349680.jpg" width="200" alt="Profile picture of Dylan Hanley"> 
         <figcaption>Dylan Hanley</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>13.</dd>
-        <dt>Time</dt><dd>18:13.9</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>13.</dd>
+            <dt>Time</dt><dd>18:13.9</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -91,11 +97,13 @@
         <img src="../images/profiles/18820257.jpg" width="200" alt="Profile picture of Parker Razelun"> 
         <figcaption>Parker Razelun</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>15.</dd>
-        <dt>Time</dt><dd>18:21.8</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>15.</dd>
+            <dt>Time</dt><dd>18:21.8</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -103,11 +111,13 @@
         <img src="../images/profiles/23821078.jpg" width="200" alt="Profile picture of Santiago Valenzuela"> 
         <figcaption>Santiago Valenzuela</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>31.</dd>
-        <dt>Time</dt><dd>18:56.7</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>31.</dd>
+            <dt>Time</dt><dd>18:56.7</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -115,11 +125,13 @@
         <img src="../images/profiles/23564875.jpg" width="200" alt="Profile picture of Raphael Fournier"> 
         <figcaption>Raphael Fournier</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>32.</dd>
-        <dt>Time</dt><dd>18:57.1</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>32.</dd>
+            <dt>Time</dt><dd>18:57.1</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -127,11 +139,13 @@
         <img src="../images/profiles/25989957.jpg" width="200" alt="Profile picture of Roman Stilwell"> 
         <figcaption>Roman Stilwell</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>33.</dd>
-        <dt>Time</dt><dd>18:57.1</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>33.</dd>
+            <dt>Time</dt><dd>18:57.1</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -139,11 +153,13 @@
         <img src="../images/profiles/22288700.jpg" width="200" alt="Profile picture of Henry Strait"> 
         <figcaption>Henry Strait</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>41.</dd>
-        <dt>Time</dt><dd>19:08.0</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>41.</dd>
+            <dt>Time</dt><dd>19:08.0</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -151,11 +167,13 @@
         <img src="../images/profiles/26322015.jpg" width="200" alt="Profile picture of Elliot Daley"> 
         <figcaption>Elliot Daley</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>42.</dd>
-        <dt>Time</dt><dd>19:12.0</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>42.</dd>
+            <dt>Time</dt><dd>19:12.0</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -163,11 +181,13 @@
         <img src="../images/profiles/21147174.jpg" width="200" alt="Profile picture of Marlowe Hartnett"> 
         <figcaption>Marlowe Hartnett</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>43.</dd>
-        <dt>Time</dt><dd>19:14.5</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>43.</dd>
+            <dt>Time</dt><dd>19:14.5</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -175,11 +195,13 @@
         <img src="../images/profiles/26322046.jpg" width="200" alt="Profile picture of Jackson Cichewicz"> 
         <figcaption>Jackson Cichewicz</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>46.</dd>
-        <dt>Time</dt><dd>19:19.5</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>46.</dd>
+            <dt>Time</dt><dd>19:19.5</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -187,11 +209,13 @@
         <img src="../images/profiles/21147172.jpg" width="200" alt="Profile picture of Micah Winchell"> 
         <figcaption>Micah Winchell</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>74.</dd>
-        <dt>Time</dt><dd>19:52.1</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>74.</dd>
+            <dt>Time</dt><dd>19:52.1</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -199,11 +223,13 @@
         <img src="../images/profiles/26322025.jpg" width="200" alt="Profile picture of Emmett Strait"> 
         <figcaption>Emmett Strait</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>95.</dd>
-        <dt>Time</dt><dd>20:13.1</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>95.</dd>
+            <dt>Time</dt><dd>20:13.1</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -211,11 +237,13 @@
         <img src="../images/profiles/23636797.jpg" width="200" alt="Profile picture of Phylip Elliott"> 
         <figcaption>Phylip Elliott</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>115.</dd>
-        <dt>Time</dt><dd>20:39.6</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>115.</dd>
+            <dt>Time</dt><dd>20:39.6</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -223,11 +251,13 @@
         <img src="../images/profiles/26460401.jpg" width="200" alt="Profile picture of Leo Chi"> 
         <figcaption>Leo Chi</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>116.</dd>
-        <dt>Time</dt><dd>20:40.6</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>116.</dd>
+            <dt>Time</dt><dd>20:40.6</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -235,11 +265,13 @@
         <img src="../images/profiles/23349703.jpg" width="200" alt="Profile picture of Ethan Miller"> 
         <figcaption>Ethan Miller</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>211.</dd>
-        <dt>Time</dt><dd>22:21.9</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>211.</dd>
+            <dt>Time</dt><dd>22:21.9</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -247,11 +279,13 @@
         <img src="../images/profiles/23349716.jpg" width="200" alt="Profile picture of Jude Shafer"> 
         <figcaption>Jude Shafer</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>255.</dd>
-        <dt>Time</dt><dd>23:14.4</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>255.</dd>
+            <dt>Time</dt><dd>23:14.4</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -259,11 +293,13 @@
         <img src="../images/profiles/26322018.jpg" width="200" alt="Profile picture of Cole Harms"> 
         <figcaption>Cole Harms</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>321.</dd>
-        <dt>Time</dt><dd>25:04.0</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>321.</dd>
+            <dt>Time</dt><dd>25:04.0</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -271,11 +307,13 @@
         <img src="../images/profiles/26460414.jpg" width="200" alt="Profile picture of Caspian Ruiz"> 
         <figcaption>Caspian Ruiz</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>372.</dd>
-        <dt>Time</dt><dd>29:04.1</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>372.</dd>
+            <dt>Time</dt><dd>29:04.1</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </section><section id="gallery"><h2>Gallery</h2>
    </section>
