--- a/meets/56th_Holly-Duane_Raffin_Festival_of_Races_Womens_5000_Meters_D1_Girls_24.html
+++ b/meets/56th_Holly-Duane_Raffin_Festival_of_Races_Womens_5000_Meters_D1_Girls_24.html
@@ -54,11 +54,13 @@
         <img src="../images/profiles/23564884.jpg" width="200" alt="Profile picture of Irie Scrase"> 
         <figcaption>Irie Scrase</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>11.</dd>
-        <dt>Time</dt><dd>19:48.9</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>11.</dd>
+            <dt>Time</dt><dd>19:48.9</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -66,11 +68,13 @@
         <img src="../images/profiles/23349671.jpg" width="200" alt="Profile picture of Lila Edison"> 
         <figcaption>Lila Edison</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>41.</dd>
-        <dt>Time</dt><dd>21:47.4</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>41.</dd>
+            <dt>Time</dt><dd>21:47.4</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -78,11 +82,13 @@
         <img src="../images/profiles/23349719.jpg" width="200" alt="Profile picture of Isla Tharp"> 
         <figcaption>Isla Tharp</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>45.</dd>
-        <dt>Time</dt><dd>21:52.3</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>45.</dd>
+            <dt>Time</dt><dd>21:52.3</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -90,11 +96,13 @@
         <img src="../images/profiles/23564882.jpg" width="200" alt="Profile picture of Alison Kauffman"> 
         <figcaption>Alison Kauffman</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>55.</dd>
-        <dt>Time</dt><dd>22:09.9</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>55.</dd>
+            <dt>Time</dt><dd>22:09.9</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -102,11 +110,13 @@
         <img src="../images/profiles/23687883.jpg" width="200" alt="Profile picture of Mara Mocanu"> 
         <figcaption>Mara Mocanu</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>56.</dd>
-        <dt>Time</dt><dd>22:13.0</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>56.</dd>
+            <dt>Time</dt><dd>22:13.0</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -114,11 +124,13 @@
         <img src="../images/profiles/19352189.jpg" width="200" alt="Profile picture of Ayla Balazer"> 
         <figcaption>Ayla Balazer</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>90.</dd>
-        <dt>Time</dt><dd>24:18.8</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>90.</dd>
+            <dt>Time</dt><dd>24:18.8</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </section><section id="gallery"><h2>Gallery</h2>
    </section>
