--- a/meets/Bret_Clements_Bath_Invitational_Womens_5000_Meters_Class_1_24.html
+++ b/meets/Bret_Clements_Bath_Invitational_Womens_5000_Meters_Class_1_24.html
@@ -47,11 +47,13 @@
         <img src="../images/profiles/23564884.jpg" width="200" alt="Profile picture of Irie Scrase"> 
         <figcaption>Irie Scrase</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>11.</dd>
-        <dt>Time</dt><dd>20:04.61</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>11.</dd>
+            <dt>Time</dt><dd>20:04.61</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -59,11 +61,13 @@
         <img src="../images/profiles/23349719.jpg" width="200" alt="Profile picture of Isla Tharp"> 
         <figcaption>Isla Tharp</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>22.</dd>
-        <dt>Time</dt><dd>20:34.25</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>22.</dd>
+            <dt>Time</dt><dd>20:34.25</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -71,11 +75,13 @@
         <img src="../images/profiles/23349671.jpg" width="200" alt="Profile picture of Lila Edison"> 
         <figcaption>Lila Edison</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>33.</dd>
-        <dt>Time</dt><dd>20:55.12</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>33.</dd>
+            <dt>Time</dt><dd>20:55.12</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -83,11 +89,13 @@
         <img src="../images/profiles/24262808.jpg" width="200" alt="Profile picture of Becca Van Lent"> 
         <figcaption>Becca Van Lent</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>43.</dd>
-        <dt>Time</dt><dd>21:38.76</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>43.</dd>
+            <dt>Time</dt><dd>21:38.76</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -95,11 +103,13 @@
         <img src="../images/profiles/19352189.jpg" width="200" alt="Profile picture of Ayla Balazer"> 
         <figcaption>Ayla Balazer</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>49.</dd>
-        <dt>Time</dt><dd>21:55.86</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>49.</dd>
+            <dt>Time</dt><dd>21:55.86</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -107,11 +117,13 @@
         <img src="../images/profiles/23564882.jpg" width="200" alt="Profile picture of Alison Kauffman"> 
         <figcaption>Alison Kauffman</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>52.</dd>
-        <dt>Time</dt><dd>21:58.92</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>52.</dd>
+            <dt>Time</dt><dd>21:58.92</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -119,11 +131,13 @@
         <img src="../images/profiles/23687883.jpg" width="200" alt="Profile picture of Mara Mocanu"> 
         <figcaption>Mara Mocanu</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>58.</dd>
-        <dt>Time</dt><dd>22:15.03</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>58.</dd>
+            <dt>Time</dt><dd>22:15.03</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -131,11 +145,13 @@
         <img src="../images/profiles/23349718.jpg" width="200" alt="Profile picture of Elin Tenbrink"> 
         <figcaption>Elin Tenbrink</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>62.</dd>
-        <dt>Time</dt><dd>22:29.94</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>62.</dd>
+            <dt>Time</dt><dd>22:29.94</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -143,11 +159,13 @@
         <img src="../images/profiles/22520342.jpg" width="200" alt="Profile picture of Tia Cocciolone"> 
         <figcaption>Tia Cocciolone</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>67.</dd>
-        <dt>Time</dt><dd>22:45.55</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>67.</dd>
+            <dt>Time</dt><dd>22:45.55</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -155,11 +173,13 @@
         <img src="../images/profiles/24802677.jpg" width="200" alt="Profile picture of Gwen Stotts-Walshe"> 
         <figcaption>Gwen Stotts-Walshe</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>72.</dd>
-        <dt>Time</dt><dd>22:49.94</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>72.</dd>
+            <dt>Time</dt><dd>22:49.94</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </section><section id="gallery"><h2>Gallery</h2>
    </section>
