--- a/meets/Jackson_Invitational_Womens_5000_Meters_Orange_Division_(1000_+_enrolment)_24.html
+++ b/meets/Jackson_Invitational_Womens_5000_Meters_Orange_Division_(1000_+_enrolment)_24.html
@@ -64,11 +64,13 @@
         <img src="../images/profiles/24262808.jpg" width="200" alt="Profile picture of Becca Van Lent"> 
         <figcaption>Becca Van Lent</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>56.</dd>
-        <dt>Time</dt><dd>19:57.87</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>56.</dd>
+            <dt>Time</dt><dd>19:57.87</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -76,11 +78,13 @@
         <img src="../images/profiles/23349719.jpg" width="200" alt="Profile picture of Isla Tharp"> 
         <figcaption>Isla Tharp</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>64.</dd>
-        <dt>Time</dt><dd>20:12.31</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>64.</dd>
+            <dt>Time</dt><dd>20:12.31</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -88,11 +92,13 @@
         <img src="../images/profiles/23349671.jpg" width="200" alt="Profile picture of Lila Edison"> 
         <figcaption>Lila Edison</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>94.</dd>
-        <dt>Time</dt><dd>20:46.19</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>94.</dd>
+            <dt>Time</dt><dd>20:46.19</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -100,11 +106,13 @@
         <img src="../images/profiles/23564882.jpg" width="200" alt="Profile picture of Alison Kauffman"> 
         <figcaption>Alison Kauffman</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>143.</dd>
-        <dt>Time</dt><dd>21:38.28</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>143.</dd>
+            <dt>Time</dt><dd>21:38.28</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -112,11 +120,13 @@
         <img src="../images/profiles/23687883.jpg" width="200" alt="Profile picture of Mara Mocanu"> 
         <figcaption>Mara Mocanu</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>144.</dd>
-        <dt>Time</dt><dd>21:40.87</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>144.</dd>
+            <dt>Time</dt><dd>21:40.87</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -124,11 +134,13 @@
         <img src="../images/profiles/23349718.jpg" width="200" alt="Profile picture of Elin Tenbrink"> 
         <figcaption>Elin Tenbrink</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>164.</dd>
-        <dt>Time</dt><dd>22:09.06</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>164.</dd>
+            <dt>Time</dt><dd>22:09.06</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -136,11 +148,13 @@
         <img src="../images/profiles/21142901.jpg" width="200" alt="Profile picture of Grace Hopkins"> 
         <figcaption>Grace Hopkins</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>188.</dd>
-        <dt>Time</dt><dd>22:38.31</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>188.</dd>
+            <dt>Time</dt><dd>22:38.31</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -148,11 +162,13 @@
         <img src="../images/profiles/24802677.jpg" width="200" alt="Profile picture of Gwen Stotts-Walshe"> 
         <figcaption>Gwen Stotts-Walshe</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>191.</dd>
-        <dt>Time</dt><dd>22:41.39</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>191.</dd>
+            <dt>Time</dt><dd>22:41.39</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -160,11 +176,13 @@
         <img src="../images/profiles/22520342.jpg" width="200" alt="Profile picture of Tia Cocciolone"> 
         <figcaption>Tia Cocciolone</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>210.</dd>
-        <dt>Time</dt><dd>23:14.84</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>210.</dd>
+            <dt>Time</dt><dd>23:14.84</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </section><section id="gallery"><h2>Gallery</h2>
    </section>
