--- a/meets/SEC_Jamboree_#1_Mens_5000_Meters_Varsity_24.html
+++ b/meets/SEC_Jamboree_#1_Mens_5000_Meters_Varsity_24.html
@@ -48,11 +48,13 @@
         <img src="../images/profiles/21615273.jpg" width="200" alt="Profile picture of Nicholas Yuan"> 
         <figcaption>Nicholas Yuan</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>20.</dd>
-        <dt>Time</dt><dd>17:29.80</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>20.</dd>
+            <dt>Time</dt><dd>17:29.80</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -60,11 +62,13 @@
         <img src="../images/profiles/21147176.jpg" width="200" alt="Profile picture of Bruno Cifaldi"> 
         <figcaption>Bruno Cifaldi</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>25.</dd>
-        <dt>Time</dt><dd>17:41.70</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>25.</dd>
+            <dt>Time</dt><dd>17:41.70</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -72,11 +76,13 @@
         <img src="../images/profiles/23687884.jpg" width="200" alt="Profile picture of Enshu Kuan"> 
         <figcaption>Enshu Kuan</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>32.</dd>
-        <dt>Time</dt><dd>17:52.60</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>32.</dd>
+            <dt>Time</dt><dd>17:52.60</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -84,11 +90,13 @@
         <img src="../images/profiles/18820279.jpg" width="200" alt="Profile picture of Jack Robichaud"> 
         <figcaption>Jack Robichaud</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>40.</dd>
-        <dt>Time</dt><dd>18:12.20</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>40.</dd>
+            <dt>Time</dt><dd>18:12.20</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -96,11 +104,13 @@
         <img src="../images/profiles/21142917.jpg" width="200" alt="Profile picture of Zeke Lafferty"> 
         <figcaption>Zeke Lafferty</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>51.</dd>
-        <dt>Time</dt><dd>18:29.10</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>51.</dd>
+            <dt>Time</dt><dd>18:29.10</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -108,11 +118,13 @@
         <img src="../images/profiles/21147171.jpg" width="200" alt="Profile picture of Gustaf Finn"> 
         <figcaption>Gustaf Finn</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>52.</dd>
-        <dt>Time</dt><dd>18:29.20</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>52.</dd>
+            <dt>Time</dt><dd>18:29.20</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -120,11 +132,13 @@
         <img src="../images/profiles/23349698.jpg" width="200" alt="Profile picture of Oskar MacArthur"> 
         <figcaption>Oskar MacArthur</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>54.</dd>
-        <dt>Time</dt><dd>18:36.70</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>54.</dd>
+            <dt>Time</dt><dd>18:36.70</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -132,11 +146,13 @@
         <img src="../images/profiles/19203161.jpg" width="200" alt="Profile picture of Martin Gehrke"> 
         <figcaption>Martin Gehrke</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>59.</dd>
-        <dt>Time</dt><dd>18:49.70</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>59.</dd>
+            <dt>Time</dt><dd>18:49.70</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </section><section id="gallery"><h2>Gallery</h2>
    </section>
