--- a/mens_team/Connor Jett24801564.html
+++ b/mens_team/Connor Jett24801564.html
@@ -6,22 +6,19 @@
         <!-- FontAwesome (Replace YOUR_ID with your own) -->
         <script src="https://kit.fontawesome.com/YOUR_ID.js" crossorigin="anonymous"></script>
         
-        <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
         
         <title>Connor Jett</title>
     </head>
     <body>
+    <header class="athlete-header"> 
         <a href="#main">Skip to Main Content</a>
-        <nav>
-            <ul>
-                <li><a href="/index.html">Home Page</a></li>
-            </ul>
-        </nav>
-        <header>
-            <h1>Connor Jett</h1>
-            <img src="../images/profiles/24801564.jpg" alt="Athlete headshot" width="200">
-        </header>
+        <div class="header-style">
+            <a href="/index.html">Home Page</a>
+        </div>
+        <h1>Connor Jett</h1>
+        <img src="../images/profiles/24801564.jpg" alt="Athlete headshot" width="200">
+    </header>
         <main id="main">
             <section id="athlete-sr-table" class="table-container">
                 <h2>Athlete's Seasonal Records (SR) per Year</h2>
