--- a/meets/37th_Early_Bird_Open_Mens_5000_Meters_HS_Open_5K_24.html
+++ b/meets/37th_Early_Bird_Open_Mens_5000_Meters_HS_Open_5K_24.html
@@ -53,11 +53,13 @@
         <img src="../images/profiles/23349678.jpg" width="200" alt="Profile picture of Matthew Guikema"> 
         <figcaption>Matthew Guikema</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>23.</dd>
-        <dt>Time</dt><dd>17:35.10</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>23.</dd>
+            <dt>Time</dt><dd>17:35.10</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -65,11 +67,13 @@
         <img src="../images/profiles/21615273.jpg" width="200" alt="Profile picture of Nicholas Yuan"> 
         <figcaption>Nicholas Yuan</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>28.</dd>
-        <dt>Time</dt><dd>17:44.40</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>28.</dd>
+            <dt>Time</dt><dd>17:44.40</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -77,11 +81,13 @@
         <img src="../images/profiles/21142917.jpg" width="200" alt="Profile picture of Zeke Lafferty"> 
         <figcaption>Zeke Lafferty</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>40.</dd>
-        <dt>Time</dt><dd>18:07.30</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>40.</dd>
+            <dt>Time</dt><dd>18:07.30</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -89,11 +95,13 @@
         <img src="../images/profiles/18820279.jpg" width="200" alt="Profile picture of Jack Robichaud"> 
         <figcaption>Jack Robichaud</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>47.</dd>
-        <dt>Time</dt><dd>18:23.70</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>47.</dd>
+            <dt>Time</dt><dd>18:23.70</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -101,11 +109,13 @@
         <img src="../images/profiles/21147171.jpg" width="200" alt="Profile picture of Gustaf Finn"> 
         <figcaption>Gustaf Finn</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>50.</dd>
-        <dt>Time</dt><dd>18:28.20</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>50.</dd>
+            <dt>Time</dt><dd>18:28.20</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -113,11 +123,13 @@
         <img src="../images/profiles/23349698.jpg" width="200" alt="Profile picture of Oskar MacArthur"> 
         <figcaption>Oskar MacArthur</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>58.</dd>
-        <dt>Time</dt><dd>18:37.50</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>58.</dd>
+            <dt>Time</dt><dd>18:37.50</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -125,11 +137,13 @@
         <img src="../images/profiles/19203161.jpg" width="200" alt="Profile picture of Martin Gehrke"> 
         <figcaption>Martin Gehrke</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>62.</dd>
-        <dt>Time</dt><dd>18:42.70</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>62.</dd>
+            <dt>Time</dt><dd>18:42.70</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -137,11 +151,13 @@
         <img src="../images/profiles/21245954.jpg" width="200" alt="Profile picture of Kyle Krasan"> 
         <figcaption>Kyle Krasan</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>74.</dd>
-        <dt>Time</dt><dd>18:59.90</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>74.</dd>
+            <dt>Time</dt><dd>18:59.90</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -149,11 +165,13 @@
         <img src="../images/profiles/18820257.jpg" width="200" alt="Profile picture of Parker Razelun"> 
         <figcaption>Parker Razelun</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>77.</dd>
-        <dt>Time</dt><dd>19:01.80</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>77.</dd>
+            <dt>Time</dt><dd>19:01.80</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -161,11 +179,13 @@
         <img src="../images/profiles/23564875.jpg" width="200" alt="Profile picture of Raphael Fournier"> 
         <figcaption>Raphael Fournier</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>85.</dd>
-        <dt>Time</dt><dd>19:14.70</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>85.</dd>
+            <dt>Time</dt><dd>19:14.70</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -173,11 +193,13 @@
         <img src="../images/profiles/23349680.jpg" width="200" alt="Profile picture of Dylan Hanley"> 
         <figcaption>Dylan Hanley</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>86.</dd>
-        <dt>Time</dt><dd>19:15.60</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>86.</dd>
+            <dt>Time</dt><dd>19:15.60</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -185,11 +207,13 @@
         <img src="../images/profiles/21147176.jpg" width="200" alt="Profile picture of Bruno Cifaldi"> 
         <figcaption>Bruno Cifaldi</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>88.</dd>
-        <dt>Time</dt><dd>19:17.30</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>88.</dd>
+            <dt>Time</dt><dd>19:17.30</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -197,11 +221,13 @@
         <img src="../images/profiles/23564880.jpg" width="200" alt="Profile picture of Juan Luis Llanes"> 
         <figcaption>Juan Luis Llanes</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>109.</dd>
-        <dt>Time</dt><dd>19:48.00</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>109.</dd>
+            <dt>Time</dt><dd>19:48.00</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -209,11 +235,13 @@
         <img src="../images/profiles/21147174.jpg" width="200" alt="Profile picture of Marlowe Hartnett"> 
         <figcaption>Marlowe Hartnett</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>112.</dd>
-        <dt>Time</dt><dd>19:52.10</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>112.</dd>
+            <dt>Time</dt><dd>19:52.10</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -221,11 +249,13 @@
         <img src="../images/profiles/26322015.jpg" width="200" alt="Profile picture of Elliot Daley"> 
         <figcaption>Elliot Daley</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>114.</dd>
-        <dt>Time</dt><dd>19:55.40</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>114.</dd>
+            <dt>Time</dt><dd>19:55.40</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -233,11 +263,13 @@
         <img src="../images/profiles/23349712.jpg" width="200" alt="Profile picture of Paxton Rose"> 
         <figcaption>Paxton Rose</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>121.</dd>
-        <dt>Time</dt><dd>20:03.40</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>121.</dd>
+            <dt>Time</dt><dd>20:03.40</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -245,11 +277,13 @@
         <img src="../images/profiles/26322046.jpg" width="200" alt="Profile picture of Jackson Cichewicz"> 
         <figcaption>Jackson Cichewicz</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>128.</dd>
-        <dt>Time</dt><dd>20:13.20</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>128.</dd>
+            <dt>Time</dt><dd>20:13.20</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -257,11 +291,13 @@
         <img src="../images/profiles/21615274.jpg" width="200" alt="Profile picture of Garrett Comer"> 
         <figcaption>Garrett Comer</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>161.</dd>
-        <dt>Time</dt><dd>21:04.20</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>161.</dd>
+            <dt>Time</dt><dd>21:04.20</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -269,11 +305,13 @@
         <img src="../images/profiles/23636797.jpg" width="200" alt="Profile picture of Phylip Elliott"> 
         <figcaption>Phylip Elliott</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>228.</dd>
-        <dt>Time</dt><dd>23:16.10</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>228.</dd>
+            <dt>Time</dt><dd>23:16.10</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -281,11 +319,13 @@
         <img src="../images/profiles/26322021.jpg" width="200" alt="Profile picture of Sage O'Lor"> 
         <figcaption>Sage O'Lor</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>248.</dd>
-        <dt>Time</dt><dd>23:51.40</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>248.</dd>
+            <dt>Time</dt><dd>23:51.40</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </section><section id="gallery"><h2>Gallery</h2>
    </section>
