--- a/meets/37th_Early_Bird_Open_Womens_5000_Meters_HS_Open_5K_24.html
+++ b/meets/37th_Early_Bird_Open_Womens_5000_Meters_HS_Open_5K_24.html
@@ -49,11 +49,13 @@
         <img src="../images/profiles/26328690.jpg" width="200" alt="Profile picture of Lucia Llanes"> 
         <figcaption>Lucia Llanes</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>8.</dd>
-        <dt>Time</dt><dd>20:02.00</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>8.</dd>
+            <dt>Time</dt><dd>20:02.00</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -61,11 +63,13 @@
         <img src="../images/profiles/23349671.jpg" width="200" alt="Profile picture of Lila Edison"> 
         <figcaption>Lila Edison</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>12.</dd>
-        <dt>Time</dt><dd>21:03.40</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>12.</dd>
+            <dt>Time</dt><dd>21:03.40</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -73,11 +77,13 @@
         <img src="../images/profiles/23564884.jpg" width="200" alt="Profile picture of Irie Scrase"> 
         <figcaption>Irie Scrase</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>15.</dd>
-        <dt>Time</dt><dd>21:16.50</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>15.</dd>
+            <dt>Time</dt><dd>21:16.50</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -85,11 +91,13 @@
         <img src="../images/profiles/23349719.jpg" width="200" alt="Profile picture of Isla Tharp"> 
         <figcaption>Isla Tharp</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>18.</dd>
-        <dt>Time</dt><dd>21:22.30</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>18.</dd>
+            <dt>Time</dt><dd>21:22.30</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -97,11 +105,13 @@
         <img src="../images/profiles/19352189.jpg" width="200" alt="Profile picture of Ayla Balazer"> 
         <figcaption>Ayla Balazer</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>39.</dd>
-        <dt>Time</dt><dd>23:10.20</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>39.</dd>
+            <dt>Time</dt><dd>23:10.20</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -109,11 +119,13 @@
         <img src="../images/profiles/23687883.jpg" width="200" alt="Profile picture of Mara Mocanu"> 
         <figcaption>Mara Mocanu</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>40.</dd>
-        <dt>Time</dt><dd>23:13.90</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>40.</dd>
+            <dt>Time</dt><dd>23:13.90</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -121,11 +133,13 @@
         <img src="../images/profiles/23564882.jpg" width="200" alt="Profile picture of Alison Kauffman"> 
         <figcaption>Alison Kauffman</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>43.</dd>
-        <dt>Time</dt><dd>23:20.00</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>43.</dd>
+            <dt>Time</dt><dd>23:20.00</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -133,11 +147,13 @@
         <img src="../images/profiles/22520342.jpg" width="200" alt="Profile picture of Tia Cocciolone"> 
         <figcaption>Tia Cocciolone</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>47.</dd>
-        <dt>Time</dt><dd>23:42.10</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>47.</dd>
+            <dt>Time</dt><dd>23:42.10</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -145,11 +161,13 @@
         <img src="../images/profiles/24802677.jpg" width="200" alt="Profile picture of Gwen Stotts-Walshe"> 
         <figcaption>Gwen Stotts-Walshe</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>53.</dd>
-        <dt>Time</dt><dd>24:07.20</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>53.</dd>
+            <dt>Time</dt><dd>24:07.20</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -157,11 +175,13 @@
         <img src="../images/profiles/23349718.jpg" width="200" alt="Profile picture of Elin Tenbrink"> 
         <figcaption>Elin Tenbrink</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>55.</dd>
-        <dt>Time</dt><dd>24:13.00</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>55.</dd>
+            <dt>Time</dt><dd>24:13.00</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -169,11 +189,13 @@
         <img src="../images/profiles/23687880.jpg" width="200" alt="Profile picture of Julianna Heung"> 
         <figcaption>Julianna Heung</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>80.</dd>
-        <dt>Time</dt><dd>25:36.50</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>80.</dd>
+            <dt>Time</dt><dd>25:36.50</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -181,11 +203,13 @@
         <img src="../images/profiles/18895017.jpg" width="200" alt="Profile picture of Vera Naines"> 
         <figcaption>Vera Naines</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>86.</dd>
-        <dt>Time</dt><dd>26:05.90</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>86.</dd>
+            <dt>Time</dt><dd>26:05.90</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -193,11 +217,13 @@
         <img src="../images/profiles/21142908.jpg" width="200" alt="Profile picture of Alexandra Wren"> 
         <figcaption>Alexandra Wren</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>87.</dd>
-        <dt>Time</dt><dd>26:08.20</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>87.</dd>
+            <dt>Time</dt><dd>26:08.20</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -205,11 +231,13 @@
         <img src="../images/profiles/22520388.jpg" width="200" alt="Profile picture of Elsa Wenzlaff"> 
         <figcaption>Elsa Wenzlaff</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>88.</dd>
-        <dt>Time</dt><dd>26:14.50</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>88.</dd>
+            <dt>Time</dt><dd>26:14.50</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -217,11 +245,13 @@
         <img src="../images/profiles/26328689.jpg" width="200" alt="Profile picture of Calla Sopoci"> 
         <figcaption>Calla Sopoci</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>92.</dd>
-        <dt>Time</dt><dd>26:21.40</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>92.</dd>
+            <dt>Time</dt><dd>26:21.40</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -229,11 +259,13 @@
         <img src="../images/profiles/23564883.jpg" width="200" alt="Profile picture of Arabella Kessler"> 
         <figcaption>Arabella Kessler</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>157.</dd>
-        <dt>Time</dt><dd>32:58.60</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>157.</dd>
+            <dt>Time</dt><dd>32:58.60</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </section><section id="gallery"><h2>Gallery</h2>
    </section>
