--- a/meets/56th_Holly-Duane_Raffin_Festival_of_Races_Mens_5000_Meters_D1_Boys_24.html
+++ b/meets/56th_Holly-Duane_Raffin_Festival_of_Races_Mens_5000_Meters_D1_Boys_24.html
@@ -59,11 +59,13 @@
         <img src="../images/profiles/21615273.jpg" width="200" alt="Profile picture of Nicholas Yuan"> 
         <figcaption>Nicholas Yuan</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>43.</dd>
-        <dt>Time</dt><dd>17:31.6</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>43.</dd>
+            <dt>Time</dt><dd>17:31.6</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -71,11 +73,13 @@
         <img src="../images/profiles/18820279.jpg" width="200" alt="Profile picture of Jack Robichaud"> 
         <figcaption>Jack Robichaud</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>61.</dd>
-        <dt>Time</dt><dd>17:43.1</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>61.</dd>
+            <dt>Time</dt><dd>17:43.1</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -83,11 +87,13 @@
         <img src="../images/profiles/23687884.jpg" width="200" alt="Profile picture of Enshu Kuan"> 
         <figcaption>Enshu Kuan</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>63.</dd>
-        <dt>Time</dt><dd>17:44.4</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>63.</dd>
+            <dt>Time</dt><dd>17:44.4</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -95,11 +101,13 @@
         <img src="../images/profiles/21147176.jpg" width="200" alt="Profile picture of Bruno Cifaldi"> 
         <figcaption>Bruno Cifaldi</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>70.</dd>
-        <dt>Time</dt><dd>17:57.2</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>70.</dd>
+            <dt>Time</dt><dd>17:57.2</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -107,11 +115,13 @@
         <img src="../images/profiles/21245954.jpg" width="200" alt="Profile picture of Kyle Krasan"> 
         <figcaption>Kyle Krasan</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>72.</dd>
-        <dt>Time</dt><dd>18:01.8</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>72.</dd>
+            <dt>Time</dt><dd>18:01.8</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -119,11 +129,13 @@
         <img src="../images/profiles/21142917.jpg" width="200" alt="Profile picture of Zeke Lafferty"> 
         <figcaption>Zeke Lafferty</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>102.</dd>
-        <dt>Time</dt><dd>18:30.9</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>102.</dd>
+            <dt>Time</dt><dd>18:30.9</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -131,11 +143,13 @@
         <img src="../images/profiles/21147171.jpg" width="200" alt="Profile picture of Gustaf Finn"> 
         <figcaption>Gustaf Finn</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>112.</dd>
-        <dt>Time</dt><dd>18:42.0</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>112.</dd>
+            <dt>Time</dt><dd>18:42.0</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </section><section id="gallery"><h2>Gallery</h2>
    </section>
