--- a/meets/56th_Holly-Duane_Raffin_Festival_of_Races_Womens_5000_Meters_D1_JV_Girls_24.html
+++ b/meets/56th_Holly-Duane_Raffin_Festival_of_Races_Womens_5000_Meters_D1_JV_Girls_24.html
@@ -52,11 +52,13 @@
         <img src="../images/profiles/24802677.jpg" width="200" alt="Profile picture of Gwen Stotts-Walshe"> 
         <figcaption>Gwen Stotts-Walshe</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>7.</dd>
-        <dt>Time</dt><dd>23:00.7</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>7.</dd>
+            <dt>Time</dt><dd>23:00.7</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -64,11 +66,13 @@
         <img src="../images/profiles/22520342.jpg" width="200" alt="Profile picture of Tia Cocciolone"> 
         <figcaption>Tia Cocciolone</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>9.</dd>
-        <dt>Time</dt><dd>23:10.6</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>9.</dd>
+            <dt>Time</dt><dd>23:10.6</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -76,11 +80,13 @@
         <img src="../images/profiles/23349718.jpg" width="200" alt="Profile picture of Elin Tenbrink"> 
         <figcaption>Elin Tenbrink</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>11.</dd>
-        <dt>Time</dt><dd>23:19.4</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>11.</dd>
+            <dt>Time</dt><dd>23:19.4</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -88,11 +94,13 @@
         <img src="../images/profiles/21142907.jpg" width="200" alt="Profile picture of Adrienne Stewart"> 
         <figcaption>Adrienne Stewart</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>15.</dd>
-        <dt>Time</dt><dd>23:31.1</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>15.</dd>
+            <dt>Time</dt><dd>23:31.1</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -100,11 +108,13 @@
         <img src="../images/profiles/26328683.jpg" width="200" alt="Profile picture of Violet Olley"> 
         <figcaption>Violet Olley</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>22.</dd>
-        <dt>Time</dt><dd>23:46.1</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>22.</dd>
+            <dt>Time</dt><dd>23:46.1</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -112,11 +122,13 @@
         <img src="../images/profiles/21142901.jpg" width="200" alt="Profile picture of Grace Hopkins"> 
         <figcaption>Grace Hopkins</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>32.</dd>
-        <dt>Time</dt><dd>24:26.5</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>32.</dd>
+            <dt>Time</dt><dd>24:26.5</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -124,11 +136,13 @@
         <img src="../images/profiles/23687880.jpg" width="200" alt="Profile picture of Julianna Heung"> 
         <figcaption>Julianna Heung</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>36.</dd>
-        <dt>Time</dt><dd>24:33.8</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>36.</dd>
+            <dt>Time</dt><dd>24:33.8</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -136,11 +150,13 @@
         <img src="../images/profiles/23349715.jpg" width="200" alt="Profile picture of Ruthie Scott"> 
         <figcaption>Ruthie Scott</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>52.</dd>
-        <dt>Time</dt><dd>25:23.0</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>52.</dd>
+            <dt>Time</dt><dd>25:23.0</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -148,11 +164,13 @@
         <img src="../images/profiles/21142908.jpg" width="200" alt="Profile picture of Alexandra Wren"> 
         <figcaption>Alexandra Wren</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>60.</dd>
-        <dt>Time</dt><dd>25:33.3</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>60.</dd>
+            <dt>Time</dt><dd>25:33.3</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -160,11 +178,13 @@
         <img src="../images/profiles/22520388.jpg" width="200" alt="Profile picture of Elsa Wenzlaff"> 
         <figcaption>Elsa Wenzlaff</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>61.</dd>
-        <dt>Time</dt><dd>25:34.6</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>61.</dd>
+            <dt>Time</dt><dd>25:34.6</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -172,11 +192,13 @@
         <img src="../images/profiles/18895017.jpg" width="200" alt="Profile picture of Vera Naines"> 
         <figcaption>Vera Naines</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>77.</dd>
-        <dt>Time</dt><dd>26:09.8</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>77.</dd>
+            <dt>Time</dt><dd>26:09.8</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -184,11 +206,13 @@
         <img src="../images/profiles/26328678.jpg" width="200" alt="Profile picture of Pia Odell"> 
         <figcaption>Pia Odell</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>88.</dd>
-        <dt>Time</dt><dd>26:40.7</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>88.</dd>
+            <dt>Time</dt><dd>26:40.7</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -196,11 +220,13 @@
         <img src="../images/profiles/23564881.jpg" width="200" alt="Profile picture of Nina Beals"> 
         <figcaption>Nina Beals</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>98.</dd>
-        <dt>Time</dt><dd>27:19.2</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>98.</dd>
+            <dt>Time</dt><dd>27:19.2</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -208,11 +234,13 @@
         <img src="../images/profiles/23687875.jpg" width="200" alt="Profile picture of Lily Greenberg"> 
         <figcaption>Lily Greenberg</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>105.</dd>
-        <dt>Time</dt><dd>27:32.8</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>105.</dd>
+            <dt>Time</dt><dd>27:32.8</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -220,11 +248,13 @@
         <img src="../images/profiles/22520376.jpg" width="200" alt="Profile picture of Emily Mei"> 
         <figcaption>Emily Mei</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>138.</dd>
-        <dt>Time</dt><dd>29:32.6</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>138.</dd>
+            <dt>Time</dt><dd>29:32.6</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -232,11 +262,13 @@
         <img src="../images/profiles/24802883.jpg" width="200" alt="Profile picture of LeAnne Fayyad"> 
         <figcaption>LeAnne Fayyad</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>160.</dd>
-        <dt>Time</dt><dd>31:24.7</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>160.</dd>
+            <dt>Time</dt><dd>31:24.7</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -244,11 +276,13 @@
         <img src="../images/profiles/23564883.jpg" width="200" alt="Profile picture of Arabella Kessler"> 
         <figcaption>Arabella Kessler</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>164.</dd>
-        <dt>Time</dt><dd>31:35.8</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>164.</dd>
+            <dt>Time</dt><dd>31:35.8</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -256,11 +290,13 @@
         <img src="../images/profiles/26322051.jpg" width="200" alt="Profile picture of Livi Byers"> 
         <figcaption>Livi Byers</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>184.</dd>
-        <dt>Time</dt><dd>33:54.6</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>184.</dd>
+            <dt>Time</dt><dd>33:54.6</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -268,11 +304,13 @@
         <img src="../images/profiles/21142897.jpg" width="200" alt="Profile picture of Cecilia DeGuzman"> 
         <figcaption>Cecilia DeGuzman</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>185.</dd>
-        <dt>Time</dt><dd>34:10.1</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>185.</dd>
+            <dt>Time</dt><dd>34:10.1</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </section><section id="gallery"><h2>Gallery</h2>
    </section>
