--- a/meets/Bret_Clements_Bath_Invitational_Mens_5000_Meters_Class_1_24.html
+++ b/meets/Bret_Clements_Bath_Invitational_Mens_5000_Meters_Class_1_24.html
@@ -46,11 +46,13 @@
         <img src="../images/profiles/21147176.jpg" width="200" alt="Profile picture of Bruno Cifaldi"> 
         <figcaption>Bruno Cifaldi</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>24.</dd>
-        <dt>Time</dt><dd>17:07.73</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>24.</dd>
+            <dt>Time</dt><dd>17:07.73</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -58,11 +60,13 @@
         <img src="../images/profiles/21615273.jpg" width="200" alt="Profile picture of Nicholas Yuan"> 
         <figcaption>Nicholas Yuan</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>27.</dd>
-        <dt>Time</dt><dd>17:13.08</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>27.</dd>
+            <dt>Time</dt><dd>17:13.08</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -70,11 +74,13 @@
         <img src="../images/profiles/18820279.jpg" width="200" alt="Profile picture of Jack Robichaud"> 
         <figcaption>Jack Robichaud</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>29.</dd>
-        <dt>Time</dt><dd>17:14.90</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>29.</dd>
+            <dt>Time</dt><dd>17:14.90</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -82,11 +88,13 @@
         <img src="../images/profiles/21245954.jpg" width="200" alt="Profile picture of Kyle Krasan"> 
         <figcaption>Kyle Krasan</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>38.</dd>
-        <dt>Time</dt><dd>17:43.36</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>38.</dd>
+            <dt>Time</dt><dd>17:43.36</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -94,11 +102,13 @@
         <img src="../images/profiles/21142917.jpg" width="200" alt="Profile picture of Zeke Lafferty"> 
         <figcaption>Zeke Lafferty</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>47.</dd>
-        <dt>Time</dt><dd>17:57.73</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>47.</dd>
+            <dt>Time</dt><dd>17:57.73</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -106,11 +116,13 @@
         <img src="../images/profiles/23349698.jpg" width="200" alt="Profile picture of Oskar MacArthur"> 
         <figcaption>Oskar MacArthur</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>51.</dd>
-        <dt>Time</dt><dd>18:06.00</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>51.</dd>
+            <dt>Time</dt><dd>18:06.00</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -118,11 +130,13 @@
         <img src="../images/profiles/19203161.jpg" width="200" alt="Profile picture of Martin Gehrke"> 
         <figcaption>Martin Gehrke</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>54.</dd>
-        <dt>Time</dt><dd>18:17.76</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>54.</dd>
+            <dt>Time</dt><dd>18:17.76</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -130,11 +144,13 @@
         <img src="../images/profiles/18820257.jpg" width="200" alt="Profile picture of Parker Razelun"> 
         <figcaption>Parker Razelun</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>56.</dd>
-        <dt>Time</dt><dd>18:19.01</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>56.</dd>
+            <dt>Time</dt><dd>18:19.01</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -142,11 +158,13 @@
         <img src="../images/profiles/21147171.jpg" width="200" alt="Profile picture of Gustaf Finn"> 
         <figcaption>Gustaf Finn</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>58.</dd>
-        <dt>Time</dt><dd>18:22.78</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>58.</dd>
+            <dt>Time</dt><dd>18:22.78</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </section><section id="gallery"><h2>Gallery</h2>
    </section>
