--- a/meets/Jackson_Invitational_Mens_5000_Meters_Orange_Division_(1000_+_enrolment)_24.html
+++ b/meets/Jackson_Invitational_Mens_5000_Meters_Orange_Division_(1000_+_enrolment)_24.html
@@ -66,11 +66,13 @@
         <img src="../images/profiles/21147176.jpg" width="200" alt="Profile picture of Bruno Cifaldi"> 
         <figcaption>Bruno Cifaldi</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>63.</dd>
-        <dt>Time</dt><dd>16:41.60</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>63.</dd>
+            <dt>Time</dt><dd>16:41.60</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -78,11 +80,13 @@
         <img src="../images/profiles/21245954.jpg" width="200" alt="Profile picture of Kyle Krasan"> 
         <figcaption>Kyle Krasan</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>80.</dd>
-        <dt>Time</dt><dd>16:55.97</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>80.</dd>
+            <dt>Time</dt><dd>16:55.97</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -90,11 +94,13 @@
         <img src="../images/profiles/23349678.jpg" width="200" alt="Profile picture of Matthew Guikema"> 
         <figcaption>Matthew Guikema</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>90.</dd>
-        <dt>Time</dt><dd>17:01.11</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>90.</dd>
+            <dt>Time</dt><dd>17:01.11</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -102,11 +108,13 @@
         <img src="../images/profiles/23349698.jpg" width="200" alt="Profile picture of Oskar MacArthur"> 
         <figcaption>Oskar MacArthur</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>105.</dd>
-        <dt>Time</dt><dd>17:11.69</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>105.</dd>
+            <dt>Time</dt><dd>17:11.69</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -114,11 +122,13 @@
         <img src="../images/profiles/23687884.jpg" width="200" alt="Profile picture of Enshu Kuan"> 
         <figcaption>Enshu Kuan</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>107.</dd>
-        <dt>Time</dt><dd>17:12.62</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>107.</dd>
+            <dt>Time</dt><dd>17:12.62</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -126,11 +136,13 @@
         <img src="../images/profiles/18820279.jpg" width="200" alt="Profile picture of Jack Robichaud"> 
         <figcaption>Jack Robichaud</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>117.</dd>
-        <dt>Time</dt><dd>17:14.63</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>117.</dd>
+            <dt>Time</dt><dd>17:14.63</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -138,11 +150,13 @@
         <img src="../images/profiles/21615273.jpg" width="200" alt="Profile picture of Nicholas Yuan"> 
         <figcaption>Nicholas Yuan</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>133.</dd>
-        <dt>Time</dt><dd>17:21.25</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>133.</dd>
+            <dt>Time</dt><dd>17:21.25</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -150,11 +164,13 @@
         <img src="../images/profiles/21142917.jpg" width="200" alt="Profile picture of Zeke Lafferty"> 
         <figcaption>Zeke Lafferty</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>136.</dd>
-        <dt>Time</dt><dd>17:22.85</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>136.</dd>
+            <dt>Time</dt><dd>17:22.85</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -162,11 +178,13 @@
         <img src="../images/profiles/19203161.jpg" width="200" alt="Profile picture of Martin Gehrke"> 
         <figcaption>Martin Gehrke</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>146.</dd>
-        <dt>Time</dt><dd>17:28.69</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>146.</dd>
+            <dt>Time</dt><dd>17:28.69</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -174,11 +192,13 @@
         <img src="../images/profiles/23349680.jpg" width="200" alt="Profile picture of Dylan Hanley"> 
         <figcaption>Dylan Hanley</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>184.</dd>
-        <dt>Time</dt><dd>17:55.80</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>184.</dd>
+            <dt>Time</dt><dd>17:55.80</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </section><section id="gallery"><h2>Gallery</h2>
    </section>
