--- a/meets/SEC-HS_Jamboree_#2_(Red)_Mens_5000_Meters_Reserve_Boys_24.html
+++ b/meets/SEC-HS_Jamboree_#2_(Red)_Mens_5000_Meters_Reserve_Boys_24.html
@@ -40,11 +40,13 @@
         <img src="../images/profiles/21147171.jpg" width="200" alt="Profile picture of Gustaf Finn"> 
         <figcaption>Gustaf Finn</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>8.</dd>
-        <dt>Time</dt><dd>18:31.00</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>8.</dd>
+            <dt>Time</dt><dd>18:31.00</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -52,11 +54,13 @@
         <img src="../images/profiles/22288700.jpg" width="200" alt="Profile picture of Henry Strait"> 
         <figcaption>Henry Strait</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>12.</dd>
-        <dt>Time</dt><dd>18:50.50</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>12.</dd>
+            <dt>Time</dt><dd>18:50.50</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -64,11 +68,13 @@
         <img src="../images/profiles/23821078.jpg" width="200" alt="Profile picture of Santiago Valenzuela"> 
         <figcaption>Santiago Valenzuela</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>13.</dd>
-        <dt>Time</dt><dd>18:50.60</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>13.</dd>
+            <dt>Time</dt><dd>18:50.60</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -76,11 +82,13 @@
         <img src="../images/profiles/23349712.jpg" width="200" alt="Profile picture of Paxton Rose"> 
         <figcaption>Paxton Rose</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>15.</dd>
-        <dt>Time</dt><dd>18:59.00</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>15.</dd>
+            <dt>Time</dt><dd>18:59.00</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -88,11 +96,13 @@
         <img src="../images/profiles/25989957.jpg" width="200" alt="Profile picture of Roman Stilwell"> 
         <figcaption>Roman Stilwell</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>17.</dd>
-        <dt>Time</dt><dd>19:06.60</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>17.</dd>
+            <dt>Time</dt><dd>19:06.60</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -100,11 +110,13 @@
         <img src="../images/profiles/21147174.jpg" width="200" alt="Profile picture of Marlowe Hartnett"> 
         <figcaption>Marlowe Hartnett</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>18.</dd>
-        <dt>Time</dt><dd>19:10.40</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>18.</dd>
+            <dt>Time</dt><dd>19:10.40</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -112,11 +124,13 @@
         <img src="../images/profiles/21147172.jpg" width="200" alt="Profile picture of Micah Winchell"> 
         <figcaption>Micah Winchell</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>24.</dd>
-        <dt>Time</dt><dd>19:36.40</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>24.</dd>
+            <dt>Time</dt><dd>19:36.40</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -124,11 +138,13 @@
         <img src="../images/profiles/26322046.jpg" width="200" alt="Profile picture of Jackson Cichewicz"> 
         <figcaption>Jackson Cichewicz</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>30.</dd>
-        <dt>Time</dt><dd>20:06.90</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>30.</dd>
+            <dt>Time</dt><dd>20:06.90</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -136,11 +152,13 @@
         <img src="../images/profiles/18820260.jpg" width="200" alt="Profile picture of Alex Nemecek"> 
         <figcaption>Alex Nemecek</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>31.</dd>
-        <dt>Time</dt><dd>20:09.30</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>31.</dd>
+            <dt>Time</dt><dd>20:09.30</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -148,11 +166,13 @@
         <img src="../images/profiles/26322025.jpg" width="200" alt="Profile picture of Emmett Strait"> 
         <figcaption>Emmett Strait</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>32.</dd>
-        <dt>Time</dt><dd>20:15.70</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>32.</dd>
+            <dt>Time</dt><dd>20:15.70</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -160,11 +180,13 @@
         <img src="../images/profiles/23636797.jpg" width="200" alt="Profile picture of Phylip Elliott"> 
         <figcaption>Phylip Elliott</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>40.</dd>
-        <dt>Time</dt><dd>20:36.50</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>40.</dd>
+            <dt>Time</dt><dd>20:36.50</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -172,11 +194,13 @@
         <img src="../images/profiles/23349696.jpg" width="200" alt="Profile picture of Joowon Lee"> 
         <figcaption>Joowon Lee</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>57.</dd>
-        <dt>Time</dt><dd>21:25.10</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>57.</dd>
+            <dt>Time</dt><dd>21:25.10</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -184,11 +208,13 @@
         <img src="../images/profiles/26460401.jpg" width="200" alt="Profile picture of Leo Chi"> 
         <figcaption>Leo Chi</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>60.</dd>
-        <dt>Time</dt><dd>21:30.40</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>60.</dd>
+            <dt>Time</dt><dd>21:30.40</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -196,11 +222,13 @@
         <img src="../images/profiles/23349716.jpg" width="200" alt="Profile picture of Jude Shafer"> 
         <figcaption>Jude Shafer</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>78.</dd>
-        <dt>Time</dt><dd>22:11.70</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>78.</dd>
+            <dt>Time</dt><dd>22:11.70</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -208,11 +236,13 @@
         <img src="../images/profiles/24801855.jpg" width="200" alt="Profile picture of Rowan Kim"> 
         <figcaption>Rowan Kim</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>81.</dd>
-        <dt>Time</dt><dd>22:23.10</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>81.</dd>
+            <dt>Time</dt><dd>22:23.10</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -220,11 +250,13 @@
         <img src="../images/profiles/23564879.jpg" width="200" alt="Profile picture of William Johnson"> 
         <figcaption>William Johnson</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>88.</dd>
-        <dt>Time</dt><dd>22:56.20</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>88.</dd>
+            <dt>Time</dt><dd>22:56.20</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -232,11 +264,13 @@
         <img src="../images/profiles/23349707.jpg" width="200" alt="Profile picture of Ezekiel Paloff"> 
         <figcaption>Ezekiel Paloff</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>91.</dd>
-        <dt>Time</dt><dd>23:10.00</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>91.</dd>
+            <dt>Time</dt><dd>23:10.00</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -244,11 +278,13 @@
         <img src="../images/profiles/25395576.jpg" width="200" alt="Profile picture of Amir Abston"> 
         <figcaption>Amir Abston</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>94.</dd>
-        <dt>Time</dt><dd>23:52.30</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>94.</dd>
+            <dt>Time</dt><dd>23:52.30</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -256,11 +292,13 @@
         <img src="../images/profiles/26322027.jpg" width="200" alt="Profile picture of Evan Leach"> 
         <figcaption>Evan Leach</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>97.</dd>
-        <dt>Time</dt><dd>24:07.20</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>97.</dd>
+            <dt>Time</dt><dd>24:07.20</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -268,11 +306,13 @@
         <img src="../images/profiles/26322018.jpg" width="200" alt="Profile picture of Cole Harms"> 
         <figcaption>Cole Harms</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>99.</dd>
-        <dt>Time</dt><dd>24:11.60</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>99.</dd>
+            <dt>Time</dt><dd>24:11.60</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -280,11 +320,13 @@
         <img src="../images/profiles/26460421.jpg" width="200" alt="Profile picture of Lawrence Wang"> 
         <figcaption>Lawrence Wang</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>102.</dd>
-        <dt>Time</dt><dd>24:33.90</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>102.</dd>
+            <dt>Time</dt><dd>24:33.90</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </section><section id="gallery"><h2>Gallery</h2>
    </section>
