--- a/meets/SEC-HS_Jamboree_#2_(Red)_Womens_5000_Meters_Varsity_Girls_24.html
+++ b/meets/SEC-HS_Jamboree_#2_(Red)_Womens_5000_Meters_Varsity_Girls_24.html
@@ -42,11 +42,13 @@
         <img src="../images/profiles/26328690.jpg" width="200" alt="Profile picture of Lucia Llanes"> 
         <figcaption>Lucia Llanes</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>7.</dd>
-        <dt>Time</dt><dd>19:19.90</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>7.</dd>
+            <dt>Time</dt><dd>19:19.90</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -54,11 +56,13 @@
         <img src="../images/profiles/23349719.jpg" width="200" alt="Profile picture of Isla Tharp"> 
         <figcaption>Isla Tharp</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>19.</dd>
-        <dt>Time</dt><dd>20:17.00</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>19.</dd>
+            <dt>Time</dt><dd>20:17.00</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -66,11 +70,13 @@
         <img src="../images/profiles/24262808.jpg" width="200" alt="Profile picture of Becca Van Lent"> 
         <figcaption>Becca Van Lent</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>20.</dd>
-        <dt>Time</dt><dd>20:17.60</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>20.</dd>
+            <dt>Time</dt><dd>20:17.60</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -78,11 +84,13 @@
         <img src="../images/profiles/23564882.jpg" width="200" alt="Profile picture of Alison Kauffman"> 
         <figcaption>Alison Kauffman</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>35.</dd>
-        <dt>Time</dt><dd>22:09.70</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>35.</dd>
+            <dt>Time</dt><dd>22:09.70</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -90,11 +98,13 @@
         <img src="../images/profiles/19352189.jpg" width="200" alt="Profile picture of Ayla Balazer"> 
         <figcaption>Ayla Balazer</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>38.</dd>
-        <dt>Time</dt><dd>22:20.30</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>38.</dd>
+            <dt>Time</dt><dd>22:20.30</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -102,11 +112,13 @@
         <img src="../images/profiles/23687883.jpg" width="200" alt="Profile picture of Mara Mocanu"> 
         <figcaption>Mara Mocanu</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>42.</dd>
-        <dt>Time</dt><dd>22:30.00</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>42.</dd>
+            <dt>Time</dt><dd>22:30.00</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -114,11 +126,13 @@
         <img src="../images/profiles/23349718.jpg" width="200" alt="Profile picture of Elin Tenbrink"> 
         <figcaption>Elin Tenbrink</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>45.</dd>
-        <dt>Time</dt><dd>22:53.30</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>45.</dd>
+            <dt>Time</dt><dd>22:53.30</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -126,11 +140,13 @@
         <img src="../images/profiles/21142901.jpg" width="200" alt="Profile picture of Grace Hopkins"> 
         <figcaption>Grace Hopkins</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>56.</dd>
-        <dt>Time</dt><dd>24:11.70</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>56.</dd>
+            <dt>Time</dt><dd>24:11.70</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </section><section id="gallery"><h2>Gallery</h2>
    </section>
