--- a/meets/SEC_Jamboree_#1_Mens_5000_Meters_Junior_Varsity_24.html
+++ b/meets/SEC_Jamboree_#1_Mens_5000_Meters_Junior_Varsity_24.html
@@ -43,11 +43,13 @@
         <img src="../images/profiles/23821078.jpg" width="200" alt="Profile picture of Santiago Valenzuela"> 
         <figcaption>Santiago Valenzuela</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>7.</dd>
-        <dt>Time</dt><dd>18:55.70</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>7.</dd>
+            <dt>Time</dt><dd>18:55.70</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -55,11 +57,13 @@
         <img src="../images/profiles/22288700.jpg" width="200" alt="Profile picture of Henry Strait"> 
         <figcaption>Henry Strait</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>8.</dd>
-        <dt>Time</dt><dd>18:56.20</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>8.</dd>
+            <dt>Time</dt><dd>18:56.20</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -67,11 +71,13 @@
         <img src="../images/profiles/26322046.jpg" width="200" alt="Profile picture of Jackson Cichewicz"> 
         <figcaption>Jackson Cichewicz</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>11.</dd>
-        <dt>Time</dt><dd>19:11.80</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>11.</dd>
+            <dt>Time</dt><dd>19:11.80</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -79,11 +85,13 @@
         <img src="../images/profiles/23349680.jpg" width="200" alt="Profile picture of Dylan Hanley"> 
         <figcaption>Dylan Hanley</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>12.</dd>
-        <dt>Time</dt><dd>19:13.50</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>12.</dd>
+            <dt>Time</dt><dd>19:13.50</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -91,11 +99,13 @@
         <img src="../images/profiles/18820260.jpg" width="200" alt="Profile picture of Alex Nemecek"> 
         <figcaption>Alex Nemecek</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>16.</dd>
-        <dt>Time</dt><dd>19:21.40</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>16.</dd>
+            <dt>Time</dt><dd>19:21.40</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -103,11 +113,13 @@
         <img src="../images/profiles/23564875.jpg" width="200" alt="Profile picture of Raphael Fournier"> 
         <figcaption>Raphael Fournier</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>22.</dd>
-        <dt>Time</dt><dd>19:58.10</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>22.</dd>
+            <dt>Time</dt><dd>19:58.10</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -115,11 +127,13 @@
         <img src="../images/profiles/21147174.jpg" width="200" alt="Profile picture of Marlowe Hartnett"> 
         <figcaption>Marlowe Hartnett</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>25.</dd>
-        <dt>Time</dt><dd>20:05.10</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>25.</dd>
+            <dt>Time</dt><dd>20:05.10</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -127,11 +141,13 @@
         <img src="../images/profiles/26322025.jpg" width="200" alt="Profile picture of Emmett Strait"> 
         <figcaption>Emmett Strait</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>28.</dd>
-        <dt>Time</dt><dd>20:24.10</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>28.</dd>
+            <dt>Time</dt><dd>20:24.10</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -139,11 +155,13 @@
         <img src="../images/profiles/21147172.jpg" width="200" alt="Profile picture of Micah Winchell"> 
         <figcaption>Micah Winchell</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>32.</dd>
-        <dt>Time</dt><dd>20:36.00</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>32.</dd>
+            <dt>Time</dt><dd>20:36.00</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -151,11 +169,13 @@
         <img src="../images/profiles/23349696.jpg" width="200" alt="Profile picture of Joowon Lee"> 
         <figcaption>Joowon Lee</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>51.</dd>
-        <dt>Time</dt><dd>21:49.60</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>51.</dd>
+            <dt>Time</dt><dd>21:49.60</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -163,11 +183,13 @@
         <img src="../images/profiles/26460401.jpg" width="200" alt="Profile picture of Leo Chi"> 
         <figcaption>Leo Chi</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>56.</dd>
-        <dt>Time</dt><dd>21:56.30</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>56.</dd>
+            <dt>Time</dt><dd>21:56.30</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -175,11 +197,13 @@
         <img src="../images/profiles/23636797.jpg" width="200" alt="Profile picture of Phylip Elliott"> 
         <figcaption>Phylip Elliott</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>59.</dd>
-        <dt>Time</dt><dd>22:00.10</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>59.</dd>
+            <dt>Time</dt><dd>22:00.10</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -187,11 +211,13 @@
         <img src="../images/profiles/23349703.jpg" width="200" alt="Profile picture of Ethan Miller"> 
         <figcaption>Ethan Miller</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>78.</dd>
-        <dt>Time</dt><dd>22:49.70</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>78.</dd>
+            <dt>Time</dt><dd>22:49.70</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -199,11 +225,13 @@
         <img src="../images/profiles/23349707.jpg" width="200" alt="Profile picture of Ezekiel Paloff"> 
         <figcaption>Ezekiel Paloff</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>104.</dd>
-        <dt>Time</dt><dd>24:17.30</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>104.</dd>
+            <dt>Time</dt><dd>24:17.30</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -211,11 +239,13 @@
         <img src="../images/profiles/23349716.jpg" width="200" alt="Profile picture of Jude Shafer"> 
         <figcaption>Jude Shafer</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>107.</dd>
-        <dt>Time</dt><dd>24:29.00</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>107.</dd>
+            <dt>Time</dt><dd>24:29.00</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -223,11 +253,13 @@
         <img src="../images/profiles/26322018.jpg" width="200" alt="Profile picture of Cole Harms"> 
         <figcaption>Cole Harms</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>109.</dd>
-        <dt>Time</dt><dd>24:38.00</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>109.</dd>
+            <dt>Time</dt><dd>24:38.00</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -235,11 +267,13 @@
         <img src="../images/profiles/26322027.jpg" width="200" alt="Profile picture of Evan Leach"> 
         <figcaption>Evan Leach</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>110.</dd>
-        <dt>Time</dt><dd>24:53.70</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>110.</dd>
+            <dt>Time</dt><dd>24:53.70</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -247,11 +281,13 @@
         <img src="../images/profiles/25395576.jpg" width="200" alt="Profile picture of Amir Abston"> 
         <figcaption>Amir Abston</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>113.</dd>
-        <dt>Time</dt><dd>25:25.00</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>113.</dd>
+            <dt>Time</dt><dd>25:25.00</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -259,11 +295,13 @@
         <img src="../images/profiles/26460421.jpg" width="200" alt="Profile picture of Lawrence Wang"> 
         <figcaption>Lawrence Wang</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>117.</dd>
-        <dt>Time</dt><dd>26:01.50</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>117.</dd>
+            <dt>Time</dt><dd>26:01.50</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </section><section id="gallery"><h2>Gallery</h2>
    </section>
