--- a/meets/SEC_Jamboree_#1_Womens_5000_Meters_Junior_Varsity_24.html
+++ b/meets/SEC_Jamboree_#1_Womens_5000_Meters_Junior_Varsity_24.html
@@ -42,11 +42,13 @@
         <img src="../images/profiles/23564882.jpg" width="200" alt="Profile picture of Alison Kauffman"> 
         <figcaption>Alison Kauffman</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>8.</dd>
-        <dt>Time</dt><dd>23:43.30</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>8.</dd>
+            <dt>Time</dt><dd>23:43.30</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -54,11 +56,13 @@
         <img src="../images/profiles/26328683.jpg" width="200" alt="Profile picture of Violet Olley"> 
         <figcaption>Violet Olley</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>19.</dd>
-        <dt>Time</dt><dd>24:37.10</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>19.</dd>
+            <dt>Time</dt><dd>24:37.10</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -66,11 +70,13 @@
         <img src="../images/profiles/21142907.jpg" width="200" alt="Profile picture of Adrienne Stewart"> 
         <figcaption>Adrienne Stewart</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>20.</dd>
-        <dt>Time</dt><dd>24:40.60</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>20.</dd>
+            <dt>Time</dt><dd>24:40.60</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -78,11 +84,13 @@
         <img src="../images/profiles/23687880.jpg" width="200" alt="Profile picture of Julianna Heung"> 
         <figcaption>Julianna Heung</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>25.</dd>
-        <dt>Time</dt><dd>25:21.20</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>25.</dd>
+            <dt>Time</dt><dd>25:21.20</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -90,11 +98,13 @@
         <img src="../images/profiles/26328689.jpg" width="200" alt="Profile picture of Calla Sopoci"> 
         <figcaption>Calla Sopoci</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>26.</dd>
-        <dt>Time</dt><dd>25:22.90</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>26.</dd>
+            <dt>Time</dt><dd>25:22.90</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -102,11 +112,13 @@
         <img src="../images/profiles/23349715.jpg" width="200" alt="Profile picture of Ruthie Scott"> 
         <figcaption>Ruthie Scott</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>31.</dd>
-        <dt>Time</dt><dd>25:31.00</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>31.</dd>
+            <dt>Time</dt><dd>25:31.00</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -114,11 +126,13 @@
         <img src="../images/profiles/21142908.jpg" width="200" alt="Profile picture of Alexandra Wren"> 
         <figcaption>Alexandra Wren</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>32.</dd>
-        <dt>Time</dt><dd>25:33.90</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>32.</dd>
+            <dt>Time</dt><dd>25:33.90</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -126,11 +140,13 @@
         <img src="../images/profiles/22520388.jpg" width="200" alt="Profile picture of Elsa Wenzlaff"> 
         <figcaption>Elsa Wenzlaff</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>33.</dd>
-        <dt>Time</dt><dd>25:36.00</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>33.</dd>
+            <dt>Time</dt><dd>25:36.00</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -138,11 +154,13 @@
         <img src="../images/profiles/24802381.jpg" width="200" alt="Profile picture of Ann Kececi"> 
         <figcaption>Ann Kececi</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>43.</dd>
-        <dt>Time</dt><dd>26:14.90</dd>
-        <dt>Grade</dt><dd>12</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>43.</dd>
+            <dt>Time</dt><dd>26:14.90</dd>
+            <dt>Grade</dt><dd>12</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -150,11 +168,13 @@
         <img src="../images/profiles/23564881.jpg" width="200" alt="Profile picture of Nina Beals"> 
         <figcaption>Nina Beals</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>50.</dd>
-        <dt>Time</dt><dd>26:56.30</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>50.</dd>
+            <dt>Time</dt><dd>26:56.30</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -162,11 +182,13 @@
         <img src="../images/profiles/23687875.jpg" width="200" alt="Profile picture of Lily Greenberg"> 
         <figcaption>Lily Greenberg</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>71.</dd>
-        <dt>Time</dt><dd>28:39.70</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>71.</dd>
+            <dt>Time</dt><dd>28:39.70</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -174,11 +196,13 @@
         <img src="../images/profiles/23564883.jpg" width="200" alt="Profile picture of Arabella Kessler"> 
         <figcaption>Arabella Kessler</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>90.</dd>
-        <dt>Time</dt><dd>32:07.70</dd>
-        <dt>Grade</dt><dd>11</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>90.</dd>
+            <dt>Time</dt><dd>32:07.70</dd>
+            <dt>Grade</dt><dd>11</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -186,11 +210,13 @@
         <img src="../images/profiles/26322051.jpg" width="200" alt="Profile picture of Livi Byers"> 
         <figcaption>Livi Byers</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>99.</dd>
-        <dt>Time</dt><dd>33:54.10</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>99.</dd>
+            <dt>Time</dt><dd>33:54.10</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </section><section id="gallery"><h2>Gallery</h2>
    </section>
