--- a/meets/SEC_Jamboree_#1_Womens_5000_Meters_Varsity_24.html
+++ b/meets/SEC_Jamboree_#1_Womens_5000_Meters_Varsity_24.html
@@ -47,11 +47,13 @@
         <img src="../images/profiles/26328690.jpg" width="200" alt="Profile picture of Lucia Llanes"> 
         <figcaption>Lucia Llanes</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>8.</dd>
-        <dt>Time</dt><dd>19:05.20</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>8.</dd>
+            <dt>Time</dt><dd>19:05.20</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -59,11 +61,13 @@
         <img src="../images/profiles/23564884.jpg" width="200" alt="Profile picture of Irie Scrase"> 
         <figcaption>Irie Scrase</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>15.</dd>
-        <dt>Time</dt><dd>20:25.80</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>15.</dd>
+            <dt>Time</dt><dd>20:25.80</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -71,11 +75,13 @@
         <img src="../images/profiles/23687883.jpg" width="200" alt="Profile picture of Mara Mocanu"> 
         <figcaption>Mara Mocanu</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>40.</dd>
-        <dt>Time</dt><dd>22:31.20</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>40.</dd>
+            <dt>Time</dt><dd>22:31.20</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -83,11 +89,13 @@
         <img src="../images/profiles/23564882.jpg" width="200" alt="Profile picture of Alison Kauffman"> 
         <figcaption>Alison Kauffman</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>56.</dd>
-        <dt>Time</dt><dd>23:32.40</dd>
-        <dt>Grade</dt><dd>10</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>56.</dd>
+            <dt>Time</dt><dd>23:32.40</dd>
+            <dt>Grade</dt><dd>10</dd>
+        </dl>
+    </div>
 </div>
 </table></section><section id='individual-results'><h2>Individual Results</h2>
 <div class="athlete">
@@ -95,11 +103,13 @@
         <img src="../images/profiles/23349718.jpg" width="200" alt="Profile picture of Elin Tenbrink"> 
         <figcaption>Elin Tenbrink</figcaption>
     </figure>
-    <dl>
-        <dt>Place</dt><dd>67.</dd>
-        <dt>Time</dt><dd>24:09.40</dd>
-        <dt>Grade</dt><dd>9</dd>
-    </dl>
+        <div class="center-info">
+        <dl>
+            <dt>Place</dt><dd>67.</dd>
+            <dt>Time</dt><dd>24:09.40</dd>
+            <dt>Grade</dt><dd>9</dd>
+        </dl>
+    </div>
 </div>
 </section><section id="gallery"><h2>Gallery</h2>
    </section>
